# nginx-ingress-sidecar

./: Cargo.toml  clear_servers.sh  clippy.sh  config.toml  run_service_container.sh
src/: acme.rs  configuration.rs  docker.rs  main.rs  nginx.rs  settings.rs  template.rs  worker.rs
templates/: acme.tmpl  service.tmpl
