[package]
name = "nginx-ingress-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = "0.17.1"
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.89"
futures-util = "0.3.31"
tinytemplate = "1.2.1"
libc = "0.2.159"
signal = "0.7.0"
clap = { version = "4.5.19", features = ["derive"] }
log = "0.4.22"
config = "0.14.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
linkme = "0.3.28"
log4rs = "1.3.0"
instant-acme = "0.7.1"
rcgen = "0.13.1"
sha2 = "0.10.8"